--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -4,7 +4,7 @@
          xsi:noNamespaceSchemaLocation="vendor/squizlabs/php_codesniffer/phpcs.xsd">
     <config name="ignore_warnings_on_exit" value="1"/>
     <arg name="basepath" value="."/>
-    <arg name="cache" value="var/.cache-phpcs"/>
+    <arg name="cache" value=".cache-phpcs"/>
     <arg name="colors"/>
     <arg name="extensions" value="php"/>
     <file>src/</file>
