--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -6,3 +6,5 @@ parameters:
         - src
     featureToggles:
         disableCheckMissingIterableValueType: false
+    ignoreErrors:
+        - '#class-string#'
