--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,7 @@
   "license": "MIT",
   "minimum-stability": "stable",
   "require": {
-    "php": "^8.0",
-    "symfony/http-client-contracts": "^2.4",
-    "adbario/php-dot-notation": "^3.1"
+    "php": "^8.0"
   },
   "autoload": {
     "psr-4": {
