--- a/.gitattributes
+++ b/.gitattributes
@@ -19,3 +19,4 @@ phpunit.xml.dist export-ignore
 README.md export-ignore
 SETUP.md export-ignore
 LICENSE export-ignore
+.editorconfig export-ignore
