--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
     }
   },
   "require-dev": {
-    "phpstan/phpstan": "^1.8.0",
-    "squizlabs/php_codesniffer": "^3.7.0",
-    "phpunit/phpunit": "^9.6"
+    "phpstan/phpstan": "*",
+    "squizlabs/php_codesniffer": "*",
+    "phpunit/phpunit": "8 - 11"
   }
 }
