--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,6 @@
   "require-dev": {
     "phpstan/phpstan": "*",
     "squizlabs/php_codesniffer": "*",
-    "phpunit/phpunit": "8 - 11"
+    "phpunit/phpunit": ">=8 <10"
   }
 }
